Include Mueller's papers.

--- a/All.bib
+++ b/All.bib
@@ -1804,6 +1804,24 @@
   url		= {https://doi.org/10.1214/19-AOP1358}
 }
 
+@Article{	  athreya.joseph.ea:21:small,
+  author	= {Athreya, Siva and Joseph, Mathew and Mueller, Carl},
+  title		= {Small ball probabilities and a support theorem for the
+		  stochastic heat equation},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {49},
+  year		= {2021},
+  number	= {5},
+  pages		= {2548--2572},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (60G17 60G60)},
+  mrnumber	= {4317712},
+  mrreviewer	= {Vivek Kumar},
+  doi		= {10.1214/21-aop1515},
+  url		= {https://doi.org/10.1214/21-aop1515}
+}
+
 @Article{	  ayache.xiao:05:asymptotic,
   author	= {Ayache, Antoine and Xiao, Yimin},
   title		= {Asymptotic properties and {H}ausdorff dimensions of
@@ -1975,6 +1993,23 @@
   mrreviewer	= {David J. Aldous},
   doi		= {10.1090/S0894-0347-99-00307-0},
   url		= {https://doi.org/10.1090/S0894-0347-99-00307-0}
+}
+
+@Article{	  bakhtin.mueller:10:solutions,
+  author	= {Bakhtin, Yuri and Mueller, Carl},
+  title		= {Solutions of semilinear wave equation via stochastic
+		  cascades},
+  journal	= {Commun. Stoch. Anal.},
+  fjournal	= {Communications on Stochastic Analysis},
+  volume	= {4},
+  year		= {2010},
+  number	= {3},
+  pages		= {425--431},
+  mrclass	= {60H30 (35R60 60H15)},
+  mrnumber	= {2677199},
+  mrreviewer	= {Konstantinos B. Liaskos},
+  doi		= {10.31390/cosa.4.3.07},
+  url		= {https://doi.org/10.31390/cosa.4.3.07}
 }
 
 @Article{	  bakry.cohen.ea:17:preface,
@@ -6804,6 +6839,23 @@
   mrreviewer	= {Zoran Vondra\v{c}ek},
   doi		= {10.1214/aoap/1028903448},
   url		= {https://doi.org/10.1214/aoap/1028903448}
+}
+
+@Article{	  burdzy.mueller.ea:10:nonuniqueness,
+  author	= {Burdzy, K. and Mueller, C. and Perkins, E. A.},
+  title		= {Nonuniqueness for nonnegative solutions of parabolic
+		  stochastic partial differential equations},
+  journal	= {Illinois J. Math.},
+  fjournal	= {Illinois Journal of Mathematics},
+  volume	= {54},
+  year		= {2010},
+  number	= {4},
+  pages		= {1481--1507 (2012)},
+  issn		= {0019-2082},
+  mrclass	= {60H15 (60G60 60H10)},
+  mrnumber	= {2981857},
+  mrreviewer	= {Jie Xiong},
+  url		= {http://projecteuclid.org/euclid.ijm/1348505538}
 }
 
 @Article{	  burdzy.mytnik:05:super-brownian,
@@ -11790,6 +11842,23 @@
   url		= {https://doi.org/10.1007/s00440-004-0346-y}
 }
 
+@InCollection{	  cranston.mueller:88:review,
+  author	= {Cranston, M. and Mueller, C.},
+  title		= {A review of recent and older results on the absolute
+		  continuity of harmonic measure},
+  booktitle	= {Geometry of random motion ({I}thaca, {N}.{Y}., 1987)},
+  series	= {Contemp. Math.},
+  volume	= {73},
+  pages		= {9--19},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1988},
+  mrclass	= {35J15 (31C12 53C20 58G30)},
+  mrnumber	= {954624},
+  mrreviewer	= {Rainer Wittmann},
+  doi		= {10.1090/conm/073/954624},
+  url		= {https://doi.org/10.1090/conm/073/954624}
+}
+
 @Article{	  csaki.khoshnevisan.ea:00:boundary,
   author	= {Cs\'{a}ki, Endre and Khoshnevisan, Davar and Shi, Zhan},
   title		= {Boundary crossings and the distribution function of the
@@ -12635,6 +12704,7 @@
   pages		= {Paper No. 17, 25},
   mrclass	= {60G15 (60G17 60G22 60G60 60H15)},
   mrnumber	= {4235468},
+  mrreviewer	= {Dongsheng Wu},
   doi		= {10.1214/21-EJP589},
   url		= {https://doi.org/10.1214/21-EJP589}
 }
@@ -12890,6 +12960,7 @@
   issn		= {0091-1798},
   mrclass	= {60H15 (60G60 60J45)},
   mrnumber	= {4317713},
+  mrreviewer	= {Isamu D\^{o}ku},
   doi		= {10.1214/21-aop1516},
   url		= {https://doi.org/10.1214/21-aop1516}
 }
@@ -14010,6 +14081,24 @@
   url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
+@Article{	  dawson.fleischmann.ea:00:finite,
+  author	= {Dawson, Donald A. and Fleischmann, Klaus and Mueller,
+		  Carl},
+  title		= {Finite time extinction of superprocesses with catalysts},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {28},
+  year		= {2000},
+  number	= {2},
+  pages		= {603--642},
+  issn		= {0091-1798},
+  mrclass	= {60J80 (60G57 60J55)},
+  mrnumber	= {1782268},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/aop/1019160254},
+  url		= {https://doi.org/10.1214/aop/1019160254}
+}
+
 @Article{	  dawson.fleischmann.ea:03:mutually,
   author	= {Dawson, Donald A. and Fleischmann, Klaus and Mytnik,
 		  Leonid and Perkins, Edwin A. and Xiong, Jie},
@@ -14027,6 +14116,24 @@
   mrreviewer	= {Olivier Raimond},
   doi		= {10.1016/S0246-0203(02)00006-7},
   url		= {https://doi.org/10.1016/S0246-0203(02)00006-7}
+}
+
+@Article{	  dawson.fleischmann.ea:95:singularity,
+  author	= {Dawson, Donald A. and Fleischmann, Klaus and Li, Yi and
+		  Mueller, Carl},
+  title		= {Singularity of super-{B}rownian local time at a point
+		  catalyst},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {23},
+  year		= {1995},
+  number	= {1},
+  pages		= {37--55},
+  issn		= {0091-1798},
+  mrclass	= {60J80 (60G57 60J65)},
+  mrnumber	= {1330759},
+  mrreviewer	= {Steven N. Evans},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(199501)23:1<37:SOSLTA>2.0.CO;2-Q&origin=MSN}
 }
 
 @Article{	  dawson.hochberg:79:carrying,
@@ -14061,6 +14168,23 @@
   mrreviewer	= {G\'{e}rald Mazziotto},
   doi		= {10.1007/BFb0004528},
   url		= {https://doi.org/10.1007/BFb0004528}
+}
+
+@Article{	  dawson.li.ea:95:support,
+  author	= {Dawson, D. and Li, Y. and Mueller, C.},
+  title		= {The support of measure-valued branching processes in a
+		  random environment},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {23},
+  year		= {1995},
+  number	= {4},
+  pages		= {1692--1718},
+  issn		= {0091-1798},
+  mrclass	= {60J80},
+  mrnumber	= {1379164},
+  mrreviewer	= {Klaus Fleischmann},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1692:TSOMBP>2.0.CO;2-S&origin=MSN}
 }
 
 @Book{		  dawson.perkins:12:superprocesses,
@@ -15023,6 +15147,26 @@
   mrreviewer	= {Wolfgang K\"{o}nig},
   doi		= {10.1214/009117904000000531},
   url		= {https://doi.org/10.1214/009117904000000531}
+}
+
+@InCollection{	  doering.mueller.ea:03:interacting,
+  author	= {Doering, Charles R. and Mueller, Carl and Smereka, Peter},
+  title		= {Interacting particles, the stochastic
+		  {F}isher-{K}olmogorov-{P}etrovsky-{P}iscounov equation, and
+		  duality},
+  note		= {Stochastic systems: from randomness to complexity (Erice,
+		  2002)},
+  journal	= {Phys. A},
+  fjournal	= {Physica A. Statistical Mechanics and its Applications},
+  volume	= {325},
+  year		= {2003},
+  number	= {1-2},
+  pages		= {243--259},
+  issn		= {0378-4371},
+  mrclass	= {82C31 (60H40)},
+  mrnumber	= {2014157},
+  doi		= {10.1016/S0378-4371(03)00203-6},
+  url		= {https://doi.org/10.1016/S0378-4371(03)00203-6}
 }
 
 @Article{	  donati-martin.nualart:94:markov,
@@ -17728,6 +17872,74 @@
   url		= {https://doi.org/10.1007/978-3-540-78493-7_2}
 }
 
+@Article{	  fleischmann.mueller.ea:07:large,
+  author	= {Fleischmann, Klaus and Mueller, Carl and Vogt, Pascal},
+  title		= {The large scale behavior of super-{B}rownian motion in
+		  three dimensions with a single point source},
+  journal	= {Commun. Stoch. Anal.},
+  fjournal	= {Communications on Stochastic Analysis},
+  volume	= {1},
+  year		= {2007},
+  number	= {1},
+  pages		= {19--28},
+  mrclass	= {60J80 (60K35)},
+  mrnumber	= {2404370},
+  mrreviewer	= {Peter M\"{o}rters},
+  doi		= {10.31390/cosa.1.1.03},
+  url		= {https://doi.org/10.31390/cosa.1.1.03}
+}
+
+@InCollection{	  fleischmann.mueller:00:finite,
+  author	= {Fleischmann, Klaus and Mueller, Carl},
+  title		= {Finite time extinction of catalytic branching processes},
+  booktitle	= {Stochastic models ({O}ttawa, {ON}, 1998)},
+  series	= {CMS Conf. Proc.},
+  volume	= {26},
+  pages		= {125--139},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {2000},
+  mrclass	= {60J80 (60G57 60J55)},
+  mrnumber	= {1765007},
+  mrreviewer	= {Alexander Schied},
+  doi		= {10.1214/aop/1019160254},
+  url		= {https://doi.org/10.1214/aop/1019160254}
+}
+
+@Article{	  fleischmann.mueller:04:super-brownian,
+  author	= {Fleischmann, Klaus and Mueller, Carl},
+  title		= {Super-{B}rownian motion with extra birth at one point},
+  journal	= {SIAM J. Math. Anal.},
+  fjournal	= {SIAM Journal on Mathematical Analysis},
+  volume	= {36},
+  year		= {2004/05},
+  number	= {3},
+  pages		= {740--772},
+  issn		= {0036-1410},
+  mrclass	= {60J80 (60K35)},
+  mrnumber	= {2111914},
+  mrreviewer	= {Da-Quan Jiang},
+  doi		= {10.1137/S0036141002419473},
+  url		= {https://doi.org/10.1137/S0036141002419473}
+}
+
+@Article{	  fleischmann.mueller:97:super-brownian,
+  author	= {Fleischmann, Klaus and Mueller, Carl},
+  title		= {A super-{B}rownian motion with a locally infinite
+		  catalytic mass},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {107},
+  year		= {1997},
+  number	= {3},
+  pages		= {325--357},
+  issn		= {0178-8051},
+  mrclass	= {60G57 (60J55 60J80)},
+  mrnumber	= {1440136},
+  mrreviewer	= {Xue Lei Zhao},
+  doi		= {10.1007/s004400050088},
+  url		= {https://doi.org/10.1007/s004400050088}
+}
+
 @Article{	  fleischmann.mytnik.ea:10:optimal,
   author	= {Fleischmann, Klaus and Mytnik, Leonid and Wachtel,
 		  Vitali},
@@ -19464,6 +19676,41 @@
   url		= {https://doi.org/10.1007/978-1-4613-0163-9}
 }
 
+@Article{	  goldberg.mueller:82:brownian,
+  author	= {Goldberg, S. I. and Mueller, C.},
+  title		= {Brownian motion, geometry, and generalizations of
+		  {P}icard's little theorem},
+  journal	= {Bull. Amer. Math. Soc. (N.S.)},
+  fjournal	= {American Mathematical Society. Bulletin. New Series},
+  volume	= {7},
+  year		= {1982},
+  number	= {1},
+  pages		= {259--263},
+  issn		= {0273-0979},
+  mrclass	= {58G32 (32H25 60J65)},
+  mrnumber	= {656207},
+  mrreviewer	= {Jean-Louis Ducourtioux},
+  doi		= {10.1090/S0273-0979-1982-15028-5},
+  url		= {https://doi.org/10.1090/S0273-0979-1982-15028-5}
+}
+
+@Article{	  goldberg.mueller:83:brownian,
+  author	= {Goldberg, S. I. and Mueller, C.},
+  title		= {Brownian motion, geometry, and generalizations of
+		  {P}icard's little theorem},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {11},
+  year		= {1983},
+  number	= {4},
+  pages		= {833--846},
+  issn		= {0091-1798},
+  mrclass	= {58G32 (53C20 60J65)},
+  mrnumber	= {714949},
+  mrreviewer	= {Mark Pinsky},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198311)11:4<833:BMGAGO>2.0.CO;2-H&origin=MSN}
+}
+
 @Article{	  goldberg:79:local,
   author	= {Goldberg, David},
   title		= {A local version of real {H}ardy spaces},
@@ -19513,6 +19760,42 @@
   mrreviewer	= {Jingyu Huang},
   doi		= {10.1090/tran/6329},
   url		= {https://doi.org/10.1090/tran/6329}
+}
+
+@Article{	  gomez.lee.ea:13:strong,
+  author	= {Gomez, Alejandro and Lee, Kijung and Mueller, Carl and
+		  Wei, Ang and Xiong, Jie},
+  title		= {Strong uniqueness for an {SPDE} via backward doubly
+		  stochastic differential equations},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {83},
+  year		= {2013},
+  number	= {10},
+  pages		= {2186--2190},
+  issn		= {0167-7152},
+  mrclass	= {60H15 (35A02 35R60)},
+  mrnumber	= {3093800},
+  mrreviewer	= {Isamu D\^{o}ku},
+  doi		= {10.1016/j.spl.2013.06.010},
+  url		= {https://doi.org/10.1016/j.spl.2013.06.010}
+}
+
+@Article{	  gomez.lee.ea:17:on,
+  author	= {Gomez, Alejandro and Lee, Jong Jun and Mueller, Carl and
+		  Neuman, Eyal and Salins, Michael},
+  title		= {On uniqueness and blowup properties for a class of second
+		  order {SDE}s},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {22},
+  year		= {2017},
+  pages		= {Paper No. 72, 17},
+  mrclass	= {60H10 (60H15)},
+  mrnumber	= {3698741},
+  mrreviewer	= {Carsten Chong},
+  doi		= {10.1214/17-EJP95},
+  url		= {https://doi.org/10.1214/17-EJP95}
 }
 
 @Article{	  goncalves.jara:14:nonlinear,
@@ -29455,6 +29738,43 @@
   url		= {https://doi.org/10.1090/surv/089}
 }
 
+@Article{	  lee.mueller.ea:09:some,
+  author	= {Lee, Kijung and Mueller, Carl and Xiong, Jie},
+  title		= {Some properties of superprocesses under a stochastic
+		  flow},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {45},
+  year		= {2009},
+  number	= {2},
+  pages		= {477--490},
+  issn		= {0246-0203},
+  mrclass	= {60J68 (60G57 60H15 60J80)},
+  mrnumber	= {2521410},
+  mrreviewer	= {Jos\'{e} Villa-Morales},
+  doi		= {10.1214/08-AIHP171},
+  url		= {https://doi.org/10.1214/08-AIHP171}
+}
+
+@Article{	  lee.mueller.ea:20:hitting,
+  author	= {Lee, Jong Jun and Mueller, Carl and Neuman, Eyal},
+  title		= {Hitting probabilities of a {B}rownian flow with radial
+		  drift},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {48},
+  year		= {2020},
+  number	= {2},
+  pages		= {646--671},
+  issn		= {0091-1798},
+  mrclass	= {60H10 (60J45 60J60)},
+  mrnumber	= {4089490},
+  mrreviewer	= {Olga V. Aryasova},
+  doi		= {10.1214/19-AOP1368},
+  url		= {https://doi.org/10.1214/19-AOP1368}
+}
+
 @Article{	  lei.nualart:09:decomposition,
   author	= {Lei, Pedro and Nualart, David},
   title		= {A decomposition of the bifractional {B}rownian motion and
@@ -29931,6 +30251,21 @@
   url		= {https://doi.org/10.1007/978-3-662-03990-8}
 }
 
+@Article{	  lin.mueller:19:can,
+  author	= {Lin, Kevin and Mueller, Carl},
+  title		= {Can the stochastic wave equation with strong drift hit
+		  zero?},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {24},
+  year		= {2019},
+  pages		= {Paper No. 14, 26},
+  mrclass	= {60H15 (35K58 35K67 35R60 60J45)},
+  mrnumber	= {3916334},
+  doi		= {10.1214/19-EJP279},
+  url		= {https://doi.org/10.1214/19-EJP279}
+}
+
 @Article{	  lin.seppalainen:12:properties,
   author	= {Lin, Hao and Sepp\"{a}l\"{a}inen, Timo},
   title		= {Properties of the limit shape for some last-passage growth
@@ -30001,6 +30336,23 @@
   mrnumber	= {4262172},
   doi		= {10.1007/s11134-021-09704-z},
   url		= {https://doi.org/10.1007/s11134-021-09704-z}
+}
+
+@Article{	  liu.mueller:89:on,
+  author	= {Liu, Li and Mueller, Carl},
+  title		= {On the extinction of measure-valued critical branching
+		  {B}rownian motion},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {17},
+  year		= {1989},
+  number	= {4},
+  pages		= {1463--1465},
+  issn		= {0091-1798},
+  mrclass	= {60G57 (60F99 60J80)},
+  mrnumber	= {1048938},
+  mrreviewer	= {Luis G. Gorostiza},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198910)17:4<1463:OTEOMC>2.0.CO;2-N&origin=MSN}
 }
 
 @Article{	  liu.nualart.ea:19:lan,
@@ -32906,6 +33258,23 @@
   url		= {https://doi.org/10.1214/16-AOP1116}
 }
 
+@Article{	  mueller.lee:09:on,
+  author	= {Mueller, Carl and Lee, Kijung},
+  title		= {On the discrete heat equation taking values on a tree},
+  journal	= {Proc. Amer. Math. Soc.},
+  fjournal	= {Proceedings of the American Mathematical Society},
+  volume	= {137},
+  year		= {2009},
+  number	= {4},
+  pages		= {1467--1478},
+  issn		= {0002-9939},
+  mrclass	= {60H15 (35K05 35R60)},
+  mrnumber	= {2465673},
+  mrreviewer	= {Krystyna Twardowska},
+  doi		= {10.1090/S0002-9939-08-09748-7},
+  url		= {https://doi.org/10.1090/S0002-9939-08-09748-7}
+}
+
 @Article{	  mueller.mytnik.ea:06:heat,
   author	= {Mueller, Carl and Mytnik, Leonid and Stan, Aurel},
   title		= {The heat equation with time-independent multiplicative
@@ -33008,6 +33377,38 @@
   url		= {https://doi.org/10.1007/s00220-021-04084-0}
 }
 
+@Article{	  mueller.neuman.ea:20:improved,
+  author	= {Mueller, Carl and Neuman, Eyal and Salins, Michael and
+		  Truong, Giang},
+  title		= {An improved uniqueness result for a system of {SDE}
+		  related to the stochastic wave equation},
+  journal	= {J. Stoch. Anal.},
+  fjournal	= {Journal of Stochastic Analysis. JOSA},
+  volume	= {1},
+  year		= {2020},
+  number	= {2},
+  pages		= {Art. 1, 7},
+  mrclass	= {60H10 (60J60)},
+  mrnumber	= {4143954},
+  mrreviewer	= {Andrey Sarantsev},
+  doi		= {10.31390/josa.1.2.01},
+  url		= {https://doi.org/10.31390/josa.1.2.01}
+}
+
+@Article{	  mueller.neuman:22:self-repelling,
+  author	= {Mueller, Carl and Neuman, Eyal},
+  title		= {Self-repelling elastic manifolds with low dimensional
+		  range},
+  journal	= {J. Stoch. Anal.},
+  fjournal	= {Journal of Stochastic Analysis. JOSA},
+  volume	= {3},
+  year		= {2022},
+  number	= {2},
+  pages		= {Art. 1, 16},
+  mrclass	= {60G60 (60G15 82D60)},
+  mrnumber	= {4452305}
+}
+
 @Article{	  mueller.nualart:08:regularity,
   author	= {Mueller, Carl and Nualart, David},
   title		= {Regularity of the density for the stochastic heat
@@ -33024,6 +33425,189 @@
   url		= {https://doi.org/10.1214/EJP.v13-589}
 }
 
+@InCollection{	  mueller.pardoux:99:critical,
+  author	= {Mueller, Carl and Pardoux, Etienne},
+  title		= {The critical exponent for a stochastic {PDE} to hit zero},
+  booktitle	= {Stochastic analysis, control, optimization and
+		  applications},
+  series	= {Systems Control Found. Appl.},
+  pages		= {325--338},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {1999},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {1702968},
+  mrreviewer	= {David Nualart}
+}
+
+@Article{	  mueller.perkins:00:extinction,
+  author	= {Mueller, C. and Perkins, E.},
+  title		= {Extinction for two parabolic stochastic {PDE}'s on the
+		  lattice},
+  journal	= {Ann. Inst. H. Poincar\'{e} Probab. Statist.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e}. Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {36},
+  year		= {2000},
+  number	= {3},
+  pages		= {301--338},
+  issn		= {0246-0203},
+  mrclass	= {60H15 (60G57 60J65)},
+  mrnumber	= {1770621},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1016/S0246-0203(00)00128-X},
+  url		= {https://doi.org/10.1016/S0246-0203(00)00128-X}
+}
+
+@Article{	  mueller.perkins:92:compact,
+  author	= {Mueller, Carl and Perkins, Edwin A.},
+  title		= {The compact support property for solutions to the heat
+		  equation with noise},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {93},
+  year		= {1992},
+  number	= {3},
+  pages		= {325--358},
+  issn		= {0178-8051},
+  mrclass	= {60H15},
+  mrnumber	= {1180704},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  doi		= {10.1007/BF01193055},
+  url		= {https://doi.org/10.1007/BF01193055}
+}
+
+@Article{	  mueller.rudin:91:proper,
+  author	= {Mueller, Carl and Rudin, Walter},
+  title		= {Proper holomorphic self-maps of plane regions},
+  journal	= {Complex Variables Theory Appl.},
+  fjournal	= {Complex Variables. Theory and Application. An
+		  International Journal},
+  volume	= {17},
+  year		= {1991},
+  number	= {1-2},
+  pages		= {113--121},
+  issn		= {0278-1077},
+  mrclass	= {30C25 (30F99)},
+  mrnumber	= {1123810},
+  mrreviewer	= {Eric Bedford},
+  doi		= {10.1080/17476939108814502},
+  url		= {https://doi.org/10.1080/17476939108814502}
+}
+
+@Article{	  mueller.sowers:93:blowup,
+  author	= {Mueller, Carl and Sowers, Richard},
+  title		= {Blowup for the heat equation with a noise term},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {97},
+  year		= {1993},
+  number	= {3},
+  pages		= {287--320},
+  issn		= {0178-8051},
+  mrclass	= {60H15 (35K05 35R60)},
+  mrnumber	= {1245247},
+  mrreviewer	= {Krystyna Twardowska},
+  doi		= {10.1007/BF01195068},
+  url		= {https://doi.org/10.1007/BF01195068}
+}
+
+@Article{	  mueller.sowers:95:random,
+  author	= {Mueller, Carl and Sowers, Richard B.},
+  title		= {Random travelling waves for the {KPP} equation with
+		  noise},
+  journal	= {J. Funct. Anal.},
+  fjournal	= {Journal of Functional Analysis},
+  volume	= {128},
+  year		= {1995},
+  number	= {2},
+  pages		= {439--498},
+  issn		= {0022-1236},
+  mrclass	= {60H15 (35Q53 35R60)},
+  mrnumber	= {1319963},
+  doi		= {10.1006/jfan.1995.1038},
+  url		= {https://doi.org/10.1006/jfan.1995.1038}
+}
+
+@InCollection{	  mueller.sowers:95:travelling,
+  author	= {Mueller, C. and Sowers, R.},
+  title		= {Travelling waves for the {KPP} equation with noise},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {603--609},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60H15 (35Q53 35R60)},
+  mrnumber	= {1335501},
+  doi		= {10.1090/pspum/057/1335501},
+  url		= {https://doi.org/10.1090/pspum/057/1335501}
+}
+
+@Article{	  mueller.stan:05:heisenberg,
+  author	= {Mueller, C. and Stan, A.},
+  title		= {A {H}eisenberg inequality for stochastic integrals},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {18},
+  year		= {2005},
+  number	= {2},
+  pages		= {291--315},
+  issn		= {0894-9840},
+  mrclass	= {60H05 (60G44 81S25)},
+  mrnumber	= {2137044},
+  mrreviewer	= {Wei An Zheng},
+  doi		= {10.1007/s10959-004-2605-3},
+  url		= {https://doi.org/10.1007/s10959-004-2605-3}
+}
+
+@Article{	  mueller.starr:13:length,
+  author	= {Mueller, Carl and Starr, Shannon},
+  title		= {The length of the longest increasing subsequence of a
+		  random {M}allows permutation},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {26},
+  year		= {2013},
+  number	= {2},
+  pages		= {514--540},
+  issn		= {0894-9840},
+  mrclass	= {60B15 (60B10 82B05)},
+  mrnumber	= {3055815},
+  doi		= {10.1007/s10959-011-0364-5},
+  url		= {https://doi.org/10.1007/s10959-011-0364-5}
+}
+
+@Article{	  mueller.tribe:02:hitting,
+  author	= {Mueller, C. and Tribe, R.},
+  title		= {Hitting properties of a random string},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {no. 10, 29},
+  issn		= {1083-6489},
+  mrclass	= {60H15},
+  mrnumber	= {1902843},
+  mrreviewer	= {Ali S\"{u}leyman \"{U}st\"{u}nel},
+  doi		= {10.1214/EJP.v7-109},
+  url		= {https://doi.org/10.1214/EJP.v7-109}
+}
+
+@InCollection{	  mueller.tribe:02:measure-valued,
+  author	= {Mueller, C. and Tribe, R.},
+  title		= {A measure-valued process related to the parabolic
+		  {A}nderson model},
+  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
+		  {A}pplications, {III} ({A}scona, 1999)},
+  series	= {Progr. Probab.},
+  volume	= {52},
+  pages		= {219--227},
+  publisher	= {Birkh\"{a}user, Basel},
+  year		= {2002},
+  mrclass	= {60H15 (35R60 82B44)},
+  mrnumber	= {1958819}
+}
+
 @Article{	  mueller.tribe:04:singular,
   author	= {Mueller, Carl and Tribe, Roger},
   title		= {A singular parabolic {A}nderson model},
@@ -33038,6 +33622,180 @@
   mrreviewer	= {Pedro Mar\'{i}n Rubio},
   doi		= {10.1214/EJP.v9-189},
   url		= {https://doi.org/10.1214/EJP.v9-189}
+}
+
+@Article{	  mueller.tribe:11:phase,
+  author	= {Mueller, Carl and Tribe, Roger},
+  title		= {A phase diagram for a stochastic reaction diffusion
+		  system},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {149},
+  year		= {2011},
+  number	= {3-4},
+  pages		= {561--637},
+  issn		= {0178-8051},
+  mrclass	= {60H15 (35K40 35K57 35R60 60J68 60K35)},
+  mrnumber	= {2776626},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  doi		= {10.1007/s00440-010-0265-z},
+  url		= {https://doi.org/10.1007/s00440-010-0265-z}
+}
+
+@Article{	  mueller.tribe:94:phase,
+  author	= {Mueller, Carl and Tribe, Roger},
+  title		= {A phase transition for a stochastic {PDE} related to the
+		  contact process},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {100},
+  year		= {1994},
+  number	= {2},
+  pages		= {131--156},
+  issn		= {0178-8051},
+  mrclass	= {60H15 (35K55 35R60 60K35)},
+  mrnumber	= {1296425},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  doi		= {10.1007/BF01199262},
+  url		= {https://doi.org/10.1007/BF01199262}
+}
+
+@InCollection{	  mueller.tribe:94:stochastic,
+  author	= {Mueller, Carl and Tribe, Roger},
+  title		= {A stochastic {PDE} arising as the limit of a long-range
+		  contact process, and its phase transition},
+  booktitle	= {Measure-valued processes, stochastic partial differential
+		  equations, and interacting systems ({M}ontreal, {PQ},
+		  1992)},
+  series	= {CRM Proc. Lecture Notes},
+  volume	= {5},
+  pages		= {175--178},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1994},
+  mrclass	= {60H15 (35R60 60K35)},
+  mrnumber	= {1278292},
+  doi		= {10.1090/crmp/005/14},
+  url		= {https://doi.org/10.1090/crmp/005/14}
+}
+
+@Article{	  mueller.tribe:97:finite,
+  author	= {Mueller, C. and Tribe, R.},
+  title		= {Finite width for a random stationary interface},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {2},
+  year		= {1997},
+  pages		= {no. 7, 27},
+  issn		= {1083-6489},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {1485116},
+  mrreviewer	= {Richard B. Sowers},
+  doi		= {10.1214/EJP.v2-21},
+  url		= {https://doi.org/10.1214/EJP.v2-21}
+}
+
+@Article{	  mueller.truong:20:uniqueness,
+  author	= {Mueller, Carl and Truong, Giang},
+  title		= {Uniqueness of a three-dimensional stochastic differential
+		  equation},
+  journal	= {Involve},
+  fjournal	= {Involve. A Journal of Mathematics},
+  volume	= {13},
+  year		= {2020},
+  number	= {3},
+  pages		= {433--444},
+  issn		= {1944-4176},
+  mrclass	= {60H10 (34F05)},
+  mrnumber	= {4129392},
+  mrreviewer	= {Liang Wang},
+  doi		= {10.2140/involve.2020.13.433},
+  url		= {https://doi.org/10.2140/involve.2020.13.433}
+}
+
+@Article{	  mueller.weissler:82:hypercontractivity,
+  author	= {Mueller, Carl E. and Weissler, Fred B.},
+  title		= {Hypercontractivity for the heat semigroup for
+		  ultraspherical polynomials and on the {$n$}-sphere},
+  journal	= {J. Functional Analysis},
+  fjournal	= {Journal of Functional Analysis},
+  volume	= {48},
+  year		= {1982},
+  number	= {2},
+  pages		= {252--283},
+  issn		= {0022-1236},
+  mrclass	= {47D05 (46E35 81C10)},
+  mrnumber	= {674060},
+  mrreviewer	= {H. Triebel},
+  doi		= {10.1016/0022-1236(82)90069-6},
+  url		= {https://doi.org/10.1016/0022-1236(82)90069-6}
+}
+
+@Article{	  mueller.weissler:85:single,
+  author	= {Mueller, Carl E. and Weissler, Fred B.},
+  title		= {Single point blow-up for a general semilinear heat
+		  equation},
+  journal	= {Indiana Univ. Math. J.},
+  fjournal	= {Indiana University Mathematics Journal},
+  volume	= {34},
+  year		= {1985},
+  number	= {4},
+  pages		= {881--913},
+  issn		= {0022-2518},
+  mrclass	= {35B40 (35K55)},
+  mrnumber	= {808833},
+  mrreviewer	= {J. A. Goldstein},
+  doi		= {10.1512/iumj.1985.34.34049},
+  url		= {https://doi.org/10.1512/iumj.1985.34.34049}
+}
+
+@Article{	  mueller.wu:09:connection,
+  author	= {Mueller, Carl and Wu, Zhixin},
+  title		= {A connection between the stochastic heat equation and
+		  fractional {B}rownian motion, and a simple proof of a
+		  result of {T}alagrand},
+  journal	= {Electron. Commun. Probab.},
+  fjournal	= {Electronic Communications in Probability},
+  volume	= {14},
+  year		= {2009},
+  pages		= {55--65},
+  mrclass	= {35R60 (60H15)},
+  mrnumber	= {2481666},
+  doi		= {10.1214/ECP.v14-1403},
+  url		= {https://doi.org/10.1214/ECP.v14-1403}
+}
+
+@Article{	  mueller.wu:12:erratum,
+  author	= {Mueller, Carl and Wu, Zhixin},
+  title		= {Erratum: {A} connection between the stochastic heat
+		  equation and fractional {B}rownian motion and a simple
+		  proof of a result of {T}alagrand [MR2481666]},
+  journal	= {Electron. Commun. Probab.},
+  fjournal	= {Electronic Communications in Probability},
+  volume	= {17},
+  year		= {2012},
+  pages		= {no. 8, 10},
+  mrclass	= {35R60 (60G22 60H15)},
+  mrnumber	= {2878743},
+  doi		= {10.1214/ECP.v17-1774},
+  url		= {https://doi.org/10.1214/ECP.v17-1774}
+}
+
+@Article{	  mueller:00:critical,
+  author	= {Mueller, Carl},
+  title		= {The critical parameter for the heat equation with a noise
+		  term to blow up in finite time},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {28},
+  year		= {2000},
+  number	= {4},
+  pages		= {1735--1746},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35B40 35K05 35R60 60H40)},
+  mrnumber	= {1813841},
+  mrreviewer	= {Richard B. Sowers},
+  doi		= {10.1214/aop/1019160505},
+  url		= {https://doi.org/10.1214/aop/1019160505}
 }
 
 @InCollection{	  mueller:09:some,
@@ -33057,6 +33815,192 @@
   url		= {https://doi.org/10.1007/978-3-540-85994-9_4}
 }
 
+@InCollection{	  mueller:15:stochastic,
+  author	= {Mueller, Carl},
+  title		= {Stochastic {PDE} from the point of view of particle
+		  systems and duality},
+  booktitle	= {Stochastic analysis: a series of lectures},
+  series	= {Progr. Probab.},
+  volume	= {68},
+  pages		= {271--295},
+  publisher	= {Birkh\"{a}user/Springer, Basel},
+  year		= {2015},
+  mrclass	= {60H15 (35K05 35R60)},
+  mrnumber	= {3558129},
+  doi		= {10.1007/978-3-0348-0909-2\_10},
+  url		= {https://doi.org/10.1007/978-3-0348-0909-2_10}
+}
+
+@Book{		  mueller:79:extension,
+  author	= {Mueller, Carl Eric},
+  title		= {A{N} {EXTENSION} {OF} {STRASSEN}'{S} {LAW} {AND} {SOME}
+		  {PROBABILISTIC} {RESULTS} {IN} {COMPLEX} {ANALYSIS}},
+  note		= {Thesis (Ph.D.)--University of California, Berkeley},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {1979},
+  pages		= {63},
+  mrclass	= {Thesis},
+  mrnumber	= {2628703},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:8000452}
+}
+
+@Article{	  mueller:81:unification,
+  author	= {Mueller, Carl},
+  title		= {A unification of {S}trassen's law and {L}\'{e}vy's modulus
+		  of continuity},
+  journal	= {Z. Wahrsch. Verw. Gebiete},
+  fjournal	= {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und
+		  Verwandte Gebiete},
+  volume	= {56},
+  year		= {1981},
+  number	= {2},
+  pages		= {163--179},
+  issn		= {0044-3719},
+  mrclass	= {60J65 (60F15 60G17)},
+  mrnumber	= {618270},
+  mrreviewer	= {Anthony G. Pakes},
+  doi		= {10.1007/BF00535739},
+  url		= {https://doi.org/10.1007/BF00535739}
+}
+
+@Article{	  mueller:82:characterization,
+  author	= {Mueller, Carl},
+  title		= {A characterization of {BMO} and {BMO{$_{\rho }$}}},
+  journal	= {Studia Math.},
+  fjournal	= {Polska Akademia Nauk. Instytut Matematyczny. Studia
+		  Mathematica},
+  volume	= {72},
+  year		= {1982},
+  number	= {1},
+  pages		= {47--57},
+  issn		= {0039-3223},
+  mrclass	= {42B30 (30D55 46E15 60G46)},
+  mrnumber	= {665891},
+  doi		= {10.4064/sm-72-1-47-57},
+  url		= {https://doi.org/10.4064/sm-72-1-47-57}
+}
+
+@InCollection{	  mueller:82:exit,
+  author	= {Mueller, Carl},
+  title		= {Exit times of diffusions},
+  booktitle	= {Martingale theory in harmonic analysis and {B}anach spaces
+		  ({C}leveland, {O}hio, 1981)},
+  series	= {Lecture Notes in Math.},
+  volume	= {939},
+  pages		= {98--105},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60J60 (60G44 60H10)},
+  mrnumber	= {668540},
+  mrreviewer	= {Mou-Hsiung Chang}
+}
+
+@Article{	  mueller:83:strassens,
+  author	= {Mueller, Carl},
+  title		= {Strassen's law for local time},
+  journal	= {Z. Wahrsch. Verw. Gebiete},
+  fjournal	= {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und
+		  Verwandte Gebiete},
+  volume	= {63},
+  year		= {1983},
+  number	= {1},
+  pages		= {29--41},
+  issn		= {0044-3719},
+  mrclass	= {60J65 (60E15)},
+  mrnumber	= {699783},
+  mrreviewer	= {F. B. Knight},
+  doi		= {10.1007/BF00534174},
+  url		= {https://doi.org/10.1007/BF00534174}
+}
+
+@InCollection{	  mueller:88:counterexample,
+  author	= {Mueller, Carl},
+  title		= {A counterexample for {B}rownian motion on manifolds},
+  booktitle	= {Geometry of random motion ({I}thaca, {N}.{Y}., 1987)},
+  series	= {Contemp. Math.},
+  volume	= {73},
+  pages		= {217--221},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1988},
+  mrclass	= {58G32 (60D05)},
+  mrnumber	= {954641},
+  mrreviewer	= {J. C. Taylor},
+  doi		= {10.1090/conm/073/954641},
+  url		= {https://doi.org/10.1090/conm/073/954641}
+}
+
+@Article{	  mueller:89:probability,
+  author	= {Mueller, Carl},
+  title		= {Probability and the equivalence of generalized {$H^p$}
+		  spaces},
+  journal	= {Indiana Univ. Math. J.},
+  fjournal	= {Indiana University Mathematics Journal},
+  volume	= {38},
+  year		= {1989},
+  number	= {4},
+  pages		= {999--1025},
+  issn		= {0022-2518},
+  mrclass	= {60G46 (42B30)},
+  mrnumber	= {1029686},
+  mrreviewer	= {J. A. Chao},
+  doi		= {10.1512/iumj.1989.38.38046},
+  url		= {https://doi.org/10.1512/iumj.1989.38.38046}
+}
+
+@Article{	  mueller:91:connection,
+  author	= {Mueller, Carl},
+  title		= {A connection between {S}trassen's and
+		  {D}onsker-{V}aradhan's laws of the iterated logarithm},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {87},
+  year		= {1991},
+  number	= {3},
+  pages		= {365--388},
+  issn		= {0178-8051},
+  mrclass	= {60J65 (60F15 60J55)},
+  mrnumber	= {1084336},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1007/BF01312216},
+  url		= {https://doi.org/10.1007/BF01312216}
+}
+
+@Article{	  mueller:91:limit,
+  author	= {Mueller, Carl},
+  title		= {Limit results for two stochastic partial differential
+		  equations},
+  journal	= {Stochastics Stochastics Rep.},
+  fjournal	= {Stochastics and Stochastics Reports},
+  volume	= {37},
+  year		= {1991},
+  number	= {3},
+  pages		= {175--199},
+  issn		= {1045-1129},
+  mrclass	= {60H15 (35B40 35R60 60F10)},
+  mrnumber	= {1148347},
+  mrreviewer	= {Wlodzimierz Smolenski},
+  doi		= {10.1080/17442509108833734},
+  url		= {https://doi.org/10.1080/17442509108833734}
+}
+
+@Article{	  mueller:91:long,
+  author	= {Mueller, Carl},
+  title		= {Long time existence for the heat equation with a noise
+		  term},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {90},
+  year		= {1991},
+  number	= {4},
+  pages		= {505--517},
+  issn		= {0178-8051},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {1135557},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  doi		= {10.1007/BF01192141},
+  url		= {https://doi.org/10.1007/BF01192141}
+}
+
 @Article{	  mueller:91:on,
   author	= {Mueller, Carl},
   title		= {On the support of solutions to the heat equation with
@@ -33073,6 +34017,129 @@
   mrreviewer	= {A. Badrikian},
   doi		= {10.1080/17442509108833738},
   url		= {https://doi.org/10.1080/17442509108833738}
+}
+
+@InCollection{	  mueller:92:on,
+  author	= {Mueller, Carl},
+  title		= {On the polynomial hull of two balls},
+  booktitle	= {The {M}adison {S}ymposium on {C}omplex {A}nalysis
+		  ({M}adison, {WI}, 1991)},
+  series	= {Contemp. Math.},
+  volume	= {137},
+  pages		= {343--350},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1992},
+  mrclass	= {32E20},
+  mrnumber	= {1190995},
+  mrreviewer	= {P. J. de Paepe},
+  doi		= {10.1090/conm/137/1190995},
+  url		= {https://doi.org/10.1090/conm/137/1190995}
+}
+
+@Article{	  mueller:93:coupling,
+  author	= {Mueller, Carl},
+  title		= {Coupling and invariant measures for the heat equation with
+		  noise},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {21},
+  year		= {1993},
+  number	= {4},
+  pages		= {2189--2199},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {1245306},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(199310)21:4<2189:CAIMFT>2.0.CO;2-L&origin=MSN}
+}
+
+@Article{	  mueller:93:modulus,
+  author	= {Mueller, C.},
+  title		= {A modulus for the {$3$}-dimensional wave equation with
+		  noise: dealing with a singular kernel},
+  journal	= {Canad. J. Math.},
+  fjournal	= {Canadian Journal of Mathematics. Journal Canadien de
+		  Math\'{e}matiques},
+  volume	= {45},
+  year		= {1993},
+  number	= {6},
+  pages		= {1263--1275},
+  issn		= {0008-414X},
+  mrclass	= {60H15 (35L05 35R60)},
+  mrnumber	= {1247546},
+  mrreviewer	= {Ralf Manthey},
+  doi		= {10.4153/CJM-1993-071-7},
+  url		= {https://doi.org/10.4153/CJM-1993-071-7}
+}
+
+@Article{	  mueller:96:singular,
+  author	= {Mueller, Carl},
+  title		= {Singular initial conditions for the heat equation with a
+		  noise term},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {24},
+  year		= {1996},
+  number	= {1},
+  pages		= {377--398},
+  issn		= {0091-1798},
+  mrclass	= {35K20 (35R60 60H15)},
+  mrnumber	= {1387640},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  doi		= {10.1214/aop/1042644721},
+  url		= {https://doi.org/10.1214/aop/1042644721}
+}
+
+@Article{	  mueller:97:long,
+  author	= {Mueller, Carl},
+  title		= {Long time existence for the wave equation with a noise
+		  term},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {25},
+  year		= {1997},
+  number	= {1},
+  pages		= {133--151},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35L05 35R60)},
+  mrnumber	= {1428503},
+  mrreviewer	= {Fred Espen Benth},
+  doi		= {10.1214/aop/1024404282},
+  url		= {https://doi.org/10.1214/aop/1024404282}
+}
+
+@Article{	  mueller:98:heat,
+  author	= {Mueller, Carl},
+  title		= {The heat equation with {L}\'{e}vy noise},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {74},
+  year		= {1998},
+  number	= {1},
+  pages		= {67--82},
+  issn		= {0304-4149},
+  mrclass	= {60H15 (35K05 35R60)},
+  mrnumber	= {1624088},
+  mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
+  doi		= {10.1016/S0304-4149(97)00120-8},
+  url		= {https://doi.org/10.1016/S0304-4149(97)00120-8}
+}
+
+@Article{	  mueller:98:long-time,
+  author	= {Mueller, Carl},
+  title		= {Long-time existence for signed solutions of the heat
+		  equation with a noise term},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {110},
+  year		= {1998},
+  number	= {1},
+  pages		= {51--68},
+  issn		= {0178-8051},
+  mrclass	= {60H15 (35K55 35R60 60H20)},
+  mrnumber	= {1602036},
+  mrreviewer	= {Richard B. Sowers},
+  doi		= {10.1007/s004400050144},
+  url		= {https://doi.org/10.1007/s004400050144}
 }
 
 @Book{		  muirhead:82:aspects,
