--- a/All.bib
+++ b/All.bib
@@ -5703,6 +5703,23 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -5716,23 +5733,6 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -7038,22 +7038,7 @@
   url		= {https://doi.org/10.1007/s11118-008-9092-6}
 }
 
-@InCollection{	  cairoli.dalang:95:optimal,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
-}
-
-@Article{	  cairoli.dalang:95:optimal*1,
+@Article{	  cairoli.dalang:95:optimal,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -7067,6 +7052,21 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
+}
+
+@InCollection{	  cairoli.dalang:95:optimal*1,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -7902,6 +7902,23 @@
 
 @Article{	  cerrai.debussche:19:large,
   author	= {Cerrai, Sandra and Debussche, Arnaud},
+  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
+  journal	= {Appl. Math. Optim.},
+  fjournal	= {Applied Mathematics and Optimization},
+  volume	= {80},
+  year		= {2019},
+  number	= {1},
+  pages		= {81--102},
+  issn		= {0095-4616},
+  mrclass	= {35R60 (35B25 35K57)},
+  mrnumber	= {3978511},
+  mrreviewer	= {Jamil Abreu},
+  doi		= {10.1007/s00245-017-9459-4},
+  url		= {https://doi.org/10.1007/s00245-017-9459-4}
+}
+
+@Article{	  cerrai.debussche:19:large*1,
+  author	= {Cerrai, Sandra and Debussche, Arnaud},
   title		= {Large deviations for the two-dimensional stochastic
 		  {N}avier-{S}tokes equation with vanishing noise
 		  correlation},
@@ -7918,23 +7935,6 @@
   mrreviewer	= {Thomas Kelly Alberts},
   doi		= {10.1214/17-aihp881},
   url		= {https://doi.org/10.1214/17-aihp881}
-}
-
-@Article{	  cerrai.debussche:19:large*1,
-  author	= {Cerrai, Sandra and Debussche, Arnaud},
-  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
-  journal	= {Appl. Math. Optim.},
-  fjournal	= {Applied Mathematics and Optimization},
-  volume	= {80},
-  year		= {2019},
-  number	= {1},
-  pages		= {81--102},
-  issn		= {0095-4616},
-  mrclass	= {35R60 (35B25 35K57)},
-  mrnumber	= {3978511},
-  mrreviewer	= {Jamil Abreu},
-  doi		= {10.1007/s00245-017-9459-4},
-  url		= {https://doi.org/10.1007/s00245-017-9459-4}
 }
 
 @Article{	  cerrai.freidlin.ea:17:on,
@@ -9120,6 +9120,16 @@
   url		= {https://www.arxiv.org/abs/2112.04954}
 }
 
+@Article{	  chen.eisenberg:22:interpolating,
+  title		= {Interpolating the stochastic heat and wave equations with
+		  time-independent noise: solvability and exact asymptotics},
+  author	= {Le Chen and Nicholas Eisenberg},
+  year		= {2022},
+  month		= {August},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput. (in press)},
+  url		= {https://www.arxiv.org/abs/2108.11473}
+}
+
 @Article{	  chen.eisenberg:22:invariant,
   title		= {Invariant measures for the nonlinear stochastic heat
 		  equation with no drift term},
@@ -9500,6 +9510,16 @@
   url		= {https://www.arxiv.org/abs/1902.02382}
 }
 
+@Article{	  chen.huang:22:superlinear,
+  title		= {Superlinear stochastic heat equation on $\mathbb{R}^d$},
+  author	= {Le Chen and Jingyu Huang},
+  year		= {2022},
+  month		= {August},
+  journal	= {Proc. Amer. Math. Soc. (pending revision)},
+  fjournal	= {Proceedings of the American Mathematical Society},
+  url		= {http://arXiv.org/abs/2208.03853}
+}
+
 @Article{	  chen.khoshnevisan.ea:16:decorrelation,
   author	= {Chen, Le and Khoshnevisan, Davar and Kim, Kunwoo},
   title		= {Decorrelation of total mass via energy},
@@ -9536,6 +9556,17 @@
   mrreviewer	= {Paul Andr\'{e} Razafimandimby},
   doi		= {10.1214/16-AIHP780},
   url		= {https://doi.org/10.1214/16-AIHP780}
+}
+
+@Article{	  chen.khoshnevisan.ea:20:central,
+  title		= {Central limit theorems for spatial averages of the
+		  stochastic heat equation via Malliavin-Stein's method},
+  author	= {Le Chen and Davar Khoshnevisan and David Nualart and Fei
+		  Pu},
+  year		= {2020},
+  month		= {August},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput. (in press)},
+  url		= {http://arXiv.org/abs/2008.02408}
 }
 
 @Article{	  chen.khoshnevisan.ea:21:clt,
@@ -11659,22 +11690,6 @@
 }
 
 @Article{	  corwin:16:kardar-parisi-zhang,
-  author	= {Corwin, Ivan},
-  title		= {Kardar-{P}arisi-{Z}hang universality [reprint of
-		  {MR}3445162]},
-  journal	= {Eur. Math. Soc. Newsl.},
-  fjournal	= {European Mathematical Society. Newsletter},
-  number	= {101},
-  year		= {2016},
-  pages		= {19--27},
-  issn		= {1027-488X},
-  mrclass	= {82B23 (35K59 35R60 60H15 60K35)},
-  mrnumber	= {3526310},
-  doi		= {10.4171/news/101/6},
-  url		= {https://doi.org/10.4171/news/101/6}
-}
-
-@Article{	  corwin:16:kardar-parisi-zhang*1,
   author	= {Corwin, I.},
   title		= {Kardar-{P}arisi-{Z}hang universality},
   journal	= {Notices Amer. Math. Soc.},
@@ -11689,6 +11704,22 @@
   mrreviewer	= {Flora Koukiou},
   doi		= {10.1090/noti1334},
   url		= {https://doi.org/10.1090/noti1334}
+}
+
+@Article{	  corwin:16:kardar-parisi-zhang*1,
+  author	= {Corwin, Ivan},
+  title		= {Kardar-{P}arisi-{Z}hang universality [reprint of
+		  {MR}3445162]},
+  journal	= {Eur. Math. Soc. Newsl.},
+  fjournal	= {European Mathematical Society. Newsletter},
+  number	= {101},
+  year		= {2016},
+  pages		= {19--27},
+  issn		= {1027-488X},
+  mrclass	= {82B23 (35K59 35R60 60H15 60K35)},
+  mrnumber	= {3526310},
+  doi		= {10.4171/news/101/6},
+  url		= {https://doi.org/10.4171/news/101/6}
 }
 
 @Article{	  corwin:18:commentary,
@@ -12694,22 +12725,7 @@
   url		= {https://doi.org/10.1214/21-EJP589}
 }
 
-@InCollection{	  dalang.leveque:04:second-order,
-  author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
-  title		= {Second-order hyperbolic {S}.{P}.{D}.{E}.'s driven by
-		  boundary noises},
-  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
-		  {A}pplications {IV}},
-  series	= {Progr. Probab.},
-  volume	= {58},
-  pages		= {83--93},
-  publisher	= {Birkh\"{a}user, Basel},
-  year		= {2004},
-  mrclass	= {60H15 (35L10 35R60)},
-  mrnumber	= {2096282}
-}
-
-@Article{	  dalang.leveque:04:second-order*1,
+@Article{	  dalang.leveque:04:second-order,
   author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
   title		= {Second-order linear hyperbolic {SPDE}s driven by isotropic
 		  {G}aussian noise on a sphere},
@@ -12725,6 +12741,21 @@
   mrreviewer	= {Anna Karczewska},
   doi		= {10.1214/aop/1079021472},
   url		= {https://doi.org/10.1214/aop/1079021472}
+}
+
+@InCollection{	  dalang.leveque:04:second-order*1,
+  author	= {Dalang, Robert C. and L\'{e}v\^{e}que, Olivier},
+  title		= {Second-order hyperbolic {S}.{P}.{D}.{E}.'s driven by
+		  boundary noises},
+  booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
+		  {A}pplications {IV}},
+  series	= {Progr. Probab.},
+  volume	= {58},
+  pages		= {83--93},
+  publisher	= {Birkh\"{a}user, Basel},
+  year		= {2004},
+  mrclass	= {60H15 (35L10 35R60)},
+  mrnumber	= {2096282}
 }
 
 @Article{	  dalang.leveque:06:second-order,
@@ -13847,23 +13878,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -13879,6 +13893,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -14031,25 +14062,6 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -14064,6 +14076,25 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.fleischmann.ea:00:finite,
@@ -16918,20 +16949,6 @@
 @Book{		  erdelyi.magnus.ea:81:higher,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {III}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xvii+292},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698781}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*1,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -16944,7 +16961,7 @@
   mrnumber	= {698779}
 }
 
-@Book{		  erdelyi.magnus.ea:81:higher*2,
+@Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {II}},
@@ -16956,6 +16973,20 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698780}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {III}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xvii+292},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698781}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -19550,6 +19581,24 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -19565,24 +19614,6 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -21244,7 +21275,20 @@
   url		= {https://doi.org/10.1088/0951-7715/23/4/008}
 }
 
-@Article{	  hairer.manson:10:periodic,
+@InCollection{	  hairer.manson:10:periodic,
+  author	= {Hairer, Martin and Manson, Charles},
+  title		= {Periodic homogenization with an interface},
+  booktitle	= {Progress in analysis and its applications},
+  pages		= {410--416},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2010},
+  mrclass	= {60J60 (60F05)},
+  mrnumber	= {2766949},
+  doi		= {10.1142/9789814313179\_0053},
+  url		= {https://doi.org/10.1142/9789814313179_0053}
+}
+
+@Article{	  hairer.manson:10:periodic*1,
   author	= {Hairer, Martin and Manson, Charles},
   title		= {Periodic homogenization with an interface: the
 		  one-dimensional case},
@@ -21260,19 +21304,6 @@
   mrreviewer	= {Nicolas Saintier},
   doi		= {10.1016/j.spa.2010.03.016},
   url		= {https://doi.org/10.1016/j.spa.2010.03.016}
-}
-
-@InCollection{	  hairer.manson:10:periodic*1,
-  author	= {Hairer, Martin and Manson, Charles},
-  title		= {Periodic homogenization with an interface},
-  booktitle	= {Progress in analysis and its applications},
-  pages		= {410--416},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2010},
-  mrclass	= {60J60 (60F05)},
-  mrnumber	= {2766949},
-  doi		= {10.1142/9789814313179\_0053},
-  url		= {https://doi.org/10.1142/9789814313179_0053}
 }
 
 @Article{	  hairer.manson:11:periodic,
@@ -22103,6 +22134,18 @@
   author	= {Hairer, Martin},
   title		= {Singular stochastic {PDE}s},
   booktitle	= {Proceedings of the {I}nternational {C}ongress of
+		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages		= {49--73},
+  publisher	= {Kyung Moon Sa, Seoul},
+  year		= {2014},
+  mrclass	= {60H15 (81S20 82C28)},
+  mrnumber	= {3727602}
+}
+
+@InProceedings{	  hairer:14:singular*1,
+  author	= {Hairer, Martin},
+  title		= {Singular stochastic {PDE}s},
+  booktitle	= {Proceedings of the {I}nternational {C}ongress of
 		  {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages		= {685--709},
   publisher	= {Kyung Moon Sa, Seoul},
@@ -22110,18 +22153,6 @@
   mrclass	= {60H15 (81S20 82C28)},
   mrnumber	= {3728488},
   mrreviewer	= {Peter Karl Friz}
-}
-
-@InProceedings{	  hairer:14:singular*1,
-  author	= {Hairer, Martin},
-  title		= {Singular stochastic {PDE}s},
-  booktitle	= {Proceedings of the {I}nternational {C}ongress of
-		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages		= {49--73},
-  publisher	= {Kyung Moon Sa, Seoul},
-  year		= {2014},
-  mrclass	= {60H15 (81S20 82C28)},
-  mrnumber	= {3727602}
 }
 
 @InCollection{	  hairer:14:solving,
@@ -30918,24 +30949,6 @@
 
 @Article{	  malliavin.nualart:93:quasi-sure,
   author	= {Malliavin, Paul and Nualart, David},
-  title		= {Quasi-sure analysis and {S}tratonovich anticipative
-		  stochastic differential equations},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {96},
-  year		= {1993},
-  number	= {1},
-  pages		= {45--55},
-  issn		= {0178-8051},
-  mrclass	= {60H10 (60H07)},
-  mrnumber	= {1222364},
-  mrreviewer	= {Daniel Ocone},
-  doi		= {10.1007/BF01195882},
-  url		= {https://doi.org/10.1007/BF01195882}
-}
-
-@Article{	  malliavin.nualart:93:quasi-sure*1,
-  author	= {Malliavin, Paul and Nualart, David},
   title		= {Quasi-sure analysis of stochastic flows and {B}anach space
 		  valued smooth functionals on the {W}iener space},
   journal	= {J. Funct. Anal.},
@@ -30950,6 +30963,24 @@
   mrreviewer	= {Vladimir I. Bogachev},
   doi		= {10.1006/jfan.1993.1034},
   url		= {https://doi.org/10.1006/jfan.1993.1034}
+}
+
+@Article{	  malliavin.nualart:93:quasi-sure*1,
+  author	= {Malliavin, Paul and Nualart, David},
+  title		= {Quasi-sure analysis and {S}tratonovich anticipative
+		  stochastic differential equations},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {96},
+  year		= {1993},
+  number	= {1},
+  pages		= {45--55},
+  issn		= {0178-8051},
+  mrclass	= {60H10 (60H07)},
+  mrnumber	= {1222364},
+  mrreviewer	= {Daniel Ocone},
+  doi		= {10.1007/BF01195882},
+  url		= {https://doi.org/10.1007/BF01195882}
 }
 
 @Book{		  malliavin.thalmaier:06:stochastic,
@@ -34845,24 +34876,6 @@
 
 @Article{	  nane:06:iterated,
   author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion in bounded domains in
-		  {$\mathbb{R}^n$}},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {116},
-  year		= {2006},
-  number	= {6},
-  pages		= {905--916},
-  issn		= {0304-4149},
-  mrclass	= {60J65},
-  mrnumber	= {2254664},
-  mrreviewer	= {Endre Cs\'{a}ki},
-  doi		= {10.1016/j.spa.2005.10.007},
-  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
-}
-
-@Article{	  nane:06:iterated*1,
-  author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
   fjournal	= {Potential Analysis. An International Journal Devoted to
@@ -34878,6 +34891,24 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Article{	  nane:06:iterated*1,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion in bounded domains in
+		  {$\mathbb{R}^n$}},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {116},
+  year		= {2006},
+  number	= {6},
+  pages		= {905--916},
+  issn		= {0304-4149},
+  mrclass	= {60J65},
+  mrnumber	= {2254664},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1016/j.spa.2005.10.007},
+  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
 @Book{		  nane:06:iterated*2,
@@ -35797,23 +35828,6 @@
 
 @Article{	  nourdin.peccati:09:steins,
   author	= {Nourdin, Ivan and Peccati, Giovanni},
-  title		= {Stein's method on {W}iener chaos},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {145},
-  year		= {2009},
-  number	= {1-2},
-  pages		= {75--118},
-  issn		= {0178-8051},
-  mrclass	= {60F05 (60G05 60H07)},
-  mrnumber	= {2520122},
-  mrreviewer	= {Anthony R\'{e}veillac},
-  doi		= {10.1007/s00440-008-0162-x},
-  url		= {https://doi.org/10.1007/s00440-008-0162-x}
-}
-
-@Article{	  nourdin.peccati:09:steins*1,
-  author	= {Nourdin, Ivan and Peccati, Giovanni},
   title		= {Stein's method and exact {B}erry-{E}sseen asymptotics for
 		  functionals of {G}aussian fields},
   journal	= {Ann. Probab.},
@@ -35828,6 +35842,23 @@
   mrreviewer	= {Jean-Pierre Fouque},
   doi		= {10.1214/09-AOP461},
   url		= {https://doi.org/10.1214/09-AOP461}
+}
+
+@Article{	  nourdin.peccati:09:steins*1,
+  author	= {Nourdin, Ivan and Peccati, Giovanni},
+  title		= {Stein's method on {W}iener chaos},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {145},
+  year		= {2009},
+  number	= {1-2},
+  pages		= {75--118},
+  issn		= {0178-8051},
+  mrclass	= {60F05 (60G05 60H07)},
+  mrnumber	= {2520122},
+  mrreviewer	= {Anthony R\'{e}veillac},
+  doi		= {10.1007/s00440-008-0162-x},
+  url		= {https://doi.org/10.1007/s00440-008-0162-x}
 }
 
 @Article{	  nourdin.peccati:10:cumulants,
@@ -37051,6 +37082,21 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -37066,21 +37112,6 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -37403,25 +37434,7 @@
   url		= {https://doi.org/10.1080/17442508808833542}
 }
 
-@Article{	  nualart.ustunel.ea:90:some,
-  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
-  title		= {Some relations among classes of {$\sigma$}-fields on
-		  {W}iener space},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {85},
-  year		= {1990},
-  number	= {1},
-  pages		= {119--129},
-  issn		= {0178-8051},
-  mrclass	= {60H05 (28C20 46G12 60H07)},
-  mrnumber	= {1044304},
-  mrreviewer	= {Ana Bela Cruzeiro},
-  doi		= {10.1007/BF01377633},
-  url		= {https://doi.org/10.1007/BF01377633}
-}
-
-@InCollection{	  nualart.ustunel.ea:90:some*1,
+@InCollection{	  nualart.ustunel.ea:90:some,
   author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
   title		= {Some remarks on independence and conditioning on {W}iener
 		  space},
@@ -37437,6 +37450,24 @@
   mrreviewer	= {Denis R. Bell},
   doi		= {10.1007/BFb0083612},
   url		= {https://doi.org/10.1007/BFb0083612}
+}
+
+@Article{	  nualart.ustunel.ea:90:some*1,
+  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
+  title		= {Some relations among classes of {$\sigma$}-fields on
+		  {W}iener space},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {85},
+  year		= {1990},
+  number	= {1},
+  pages		= {119--129},
+  issn		= {0178-8051},
+  mrclass	= {60H05 (28C20 46G12 60H07)},
+  mrnumber	= {1044304},
+  mrreviewer	= {Ana Bela Cruzeiro},
+  doi		= {10.1007/BF01377633},
+  url		= {https://doi.org/10.1007/BF01377633}
 }
 
 @Article{	  nualart.ustunel:89:extension,
@@ -39080,22 +39111,6 @@
 
 @Article{	  ondrejat:10:stochastic,
   author	= {Ondrej\'{a}t, Martin},
-  title		= {Stochastic nonlinear wave equations in local {S}obolev
-		  spaces},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {15},
-  year		= {2010},
-  pages		= {no. 33, 1041--1091},
-  mrclass	= {60H15},
-  mrnumber	= {2659757},
-  mrreviewer	= {Chunrong Feng},
-  doi		= {10.1214/EJP.v15-789},
-  url		= {https://doi.org/10.1214/EJP.v15-789}
-}
-
-@Article{	  ondrejat:10:stochastic*1,
-  author	= {Ondrej\'{a}t, Martin},
   title		= {Stochastic wave equation with critical nonlinearities:
 		  temporal regularity and uniqueness},
   journal	= {J. Differential Equations},
@@ -39109,6 +39124,22 @@
   mrnumber	= {2593599},
   doi		= {10.1016/j.jde.2009.12.010},
   url		= {https://doi.org/10.1016/j.jde.2009.12.010}
+}
+
+@Article{	  ondrejat:10:stochastic*1,
+  author	= {Ondrej\'{a}t, Martin},
+  title		= {Stochastic nonlinear wave equations in local {S}obolev
+		  spaces},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {15},
+  year		= {2010},
+  pages		= {no. 33, 1041--1091},
+  mrclass	= {60H15},
+  mrnumber	= {2659757},
+  mrreviewer	= {Chunrong Feng},
+  doi		= {10.1214/EJP.v15-789},
+  url		= {https://doi.org/10.1214/EJP.v15-789}
 }
 
 @InCollection{	  orantin:11:chain,
@@ -41856,22 +41887,6 @@
 
 @Article{	  rovira.tindel:00:sharp,
   author	= {Rovira, Carles and Tindel, Samy},
-  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
-  journal	= {Stochastics Stochastics Rep.},
-  fjournal	= {Stochastics and Stochastics Reports},
-  volume	= {69},
-  year		= {2000},
-  number	= {1-2},
-  pages		= {11--30},
-  issn		= {1045-1129},
-  mrclass	= {60F10 (60H15)},
-  mrnumber	= {1751716},
-  doi		= {10.1080/17442500008834230},
-  url		= {https://doi.org/10.1080/17442500008834230}
-}
-
-@Article{	  rovira.tindel:00:sharp*1,
-  author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for a certain class of
 		  sets on the {W}iener space},
   journal	= {Bull. Sci. Math.},
@@ -41888,22 +41903,23 @@
   url		= {https://doi.org/10.1016/S0007-4497(00)01062-9}
 }
 
-@InCollection{	  rovira.tindel:01:sharp,
-  author	= {Rovira, C. and Tindel, S.},
-  title		= {Sharp {L}aplace asymptotics for a hyperbolic {SPDE}},
-  booktitle	= {Stochastic analysis and related topics, {VII} ({K}usadasi,
-		  1998)},
-  series	= {Progr. Probab.},
-  volume	= {48},
-  pages		= {225--244},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2001},
-  mrclass	= {60H15 (60F10)},
-  mrnumber	= {1915457},
-  mrreviewer	= {Giambattista Giacomin}
+@Article{	  rovira.tindel:00:sharp*1,
+  author	= {Rovira, Carles and Tindel, Samy},
+  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
+  journal	= {Stochastics Stochastics Rep.},
+  fjournal	= {Stochastics and Stochastics Reports},
+  volume	= {69},
+  year		= {2000},
+  number	= {1-2},
+  pages		= {11--30},
+  issn		= {1045-1129},
+  mrclass	= {60F10 (60H15)},
+  mrnumber	= {1751716},
+  doi		= {10.1080/17442500008834230},
+  url		= {https://doi.org/10.1080/17442500008834230}
 }
 
-@Article{	  rovira.tindel:01:sharp*1,
+@Article{	  rovira.tindel:01:sharp,
   author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for the stochastic heat
 		  equation},
@@ -41921,6 +41937,21 @@
   mrreviewer	= {Zhongmin Qian},
   doi		= {10.1023/A:1011286304117},
   url		= {https://doi.org/10.1023/A:1011286304117}
+}
+
+@InCollection{	  rovira.tindel:01:sharp*1,
+  author	= {Rovira, C. and Tindel, S.},
+  title		= {Sharp {L}aplace asymptotics for a hyperbolic {SPDE}},
+  booktitle	= {Stochastic analysis and related topics, {VII} ({K}usadasi,
+		  1998)},
+  series	= {Progr. Probab.},
+  volume	= {48},
+  pages		= {225--244},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2001},
+  mrclass	= {60H15 (60F10)},
+  mrnumber	= {1915457},
+  mrreviewer	= {Giambattista Giacomin}
 }
 
 @Article{	  rovira.tindel:05:on,
@@ -43714,21 +43745,7 @@
   url		= {https://doi.org/10.1007/s10955-011-0155-5}
 }
 
-@Article{	  sierocinski.zabczyk:89:on,
-  author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
-  title		= {On a packing problem},
-  journal	= {Bull. Polish Acad. Sci. Math.},
-  fjournal	= {Bulletin of the Polish Academy of Sciences. Mathematics},
-  volume	= {37},
-  year		= {1989},
-  number	= {1-6},
-  pages		= {305--313 (1990)},
-  issn		= {0239-7269},
-  mrclass	= {90C39 (90B99)},
-  mrnumber	= {1101484}
-}
-
-@InCollection{	  sierocinski.zabczyk:89:on*1,
+@InCollection{	  sierocinski.zabczyk:89:on,
   author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
   title		= {On a packing problem},
   booktitle	= {Stochastic systems and optimization ({W}arsaw, 1988)},
@@ -43741,6 +43758,20 @@
   mrnumber	= {1180793},
   doi		= {10.1007/BFb0002695},
   url		= {https://doi.org/10.1007/BFb0002695}
+}
+
+@Article{	  sierocinski.zabczyk:89:on*1,
+  author	= {Sieroci\'{n}ski, Andrzej and Zabczyk, Jerzy},
+  title		= {On a packing problem},
+  journal	= {Bull. Polish Acad. Sci. Math.},
+  fjournal	= {Bulletin of the Polish Academy of Sciences. Mathematics},
+  volume	= {37},
+  year		= {1989},
+  number	= {1-6},
+  pages		= {305--313 (1990)},
+  issn		= {0239-7269},
+  mrclass	= {90C39 (90B99)},
+  mrnumber	= {1101484}
 }
 
 @Book{		  simon:05:trace,
@@ -45468,6 +45499,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -45482,23 +45530,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
@@ -45521,6 +45552,23 @@
 
 @Article{	  tracy.widom:10:formulas,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {Formulas for joint probabilities for the asymmetric simple
+		  exclusion process},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {51},
+  year		= {2010},
+  number	= {6},
+  pages		= {063302, 10},
+  issn		= {0022-2488},
+  mrclass	= {82C22},
+  mrnumber	= {2675194},
+  doi		= {10.1063/1.3431977},
+  url		= {https://doi.org/10.1063/1.3431977}
+}
+
+@Article{	  tracy.widom:10:formulas*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {Formulas for {ASEP} with two-sided {B}ernoulli initial
 		  condition},
   journal	= {J. Stat. Phys.},
@@ -45535,23 +45583,6 @@
   mrreviewer	= {Dimitri Petritis},
   doi		= {10.1007/s10955-010-0013-x},
   url		= {https://doi.org/10.1007/s10955-010-0013-x}
-}
-
-@Article{	  tracy.widom:10:formulas*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {Formulas for joint probabilities for the asymmetric simple
-		  exclusion process},
-  journal	= {J. Math. Phys.},
-  fjournal	= {Journal of Mathematical Physics},
-  volume	= {51},
-  year		= {2010},
-  number	= {6},
-  pages		= {063302, 10},
-  issn		= {0022-2488},
-  mrclass	= {82C22},
-  mrnumber	= {2675194},
-  doi		= {10.1063/1.3431977},
-  url		= {https://doi.org/10.1063/1.3431977}
 }
 
 @Article{	  tracy.widom:11:erratum,
@@ -45665,24 +45696,6 @@
 
 @Article{	  tracy.widom:13:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the diagonal susceptibility of the two-dimensional
-		  {I}sing model},
-  journal	= {J. Math. Phys.},
-  fjournal	= {Journal of Mathematical Physics},
-  volume	= {54},
-  year		= {2013},
-  number	= {12},
-  pages		= {123302, 9},
-  issn		= {0022-2488},
-  mrclass	= {81V35 (81R12)},
-  mrnumber	= {3156118},
-  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
-  doi		= {10.1063/1.4836779},
-  url		= {https://doi.org/10.1063/1.4836779}
-}
-
-@Article{	  tracy.widom:13:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the asymmetric simple exclusion process with multiple
 		  species},
   journal	= {J. Stat. Phys.},
@@ -45697,6 +45710,24 @@
   mrreviewer	= {Anja Vo\ss -B\"{o}hme},
   doi		= {10.1007/s10955-012-0531-9},
   url		= {https://doi.org/10.1007/s10955-012-0531-9}
+}
+
+@Article{	  tracy.widom:13:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the diagonal susceptibility of the two-dimensional
+		  {I}sing model},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {54},
+  year		= {2013},
+  number	= {12},
+  pages		= {123302, 9},
+  issn		= {0022-2488},
+  mrclass	= {81V35 (81R12)},
+  mrnumber	= {3156118},
+  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
+  doi		= {10.1063/1.4836779},
+  url		= {https://doi.org/10.1063/1.4836779}
 }
 
 @Article{	  tracy.widom:14:on,
@@ -46159,6 +46190,21 @@
 
 @Article{	  tracy:88:universality,
   author	= {Tracy, Craig A.},
+  title		= {Universality classes of some aperiodic {I}sing models},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and General},
+  volume	= {21},
+  year		= {1988},
+  number	= {11},
+  pages		= {L603--L605},
+  issn		= {0305-4470},
+  mrclass	= {82A68 (82-04 82A25)},
+  mrnumber	= {953188},
+  url		= {http://stacks.iop.org/0305-4470/21/L603}
+}
+
+@Article{	  tracy:88:universality*1,
+  author	= {Tracy, Craig A.},
   title		= {Universality class of a {F}ibonacci {I}sing model},
   journal	= {J. Statist. Phys.},
   fjournal	= {Journal of Statistical Physics},
@@ -46172,21 +46218,6 @@
   mrreviewer	= {Peter J. Forrester},
   doi		= {10.1007/BF01028467},
   url		= {https://doi.org/10.1007/BF01028467}
-}
-
-@Article{	  tracy:88:universality*1,
-  author	= {Tracy, Craig A.},
-  title		= {Universality classes of some aperiodic {I}sing models},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and General},
-  volume	= {21},
-  year		= {1988},
-  number	= {11},
-  pages		= {L603--L605},
-  issn		= {0305-4470},
-  mrclass	= {82A68 (82-04 82A25)},
-  mrnumber	= {953188},
-  url		= {http://stacks.iop.org/0305-4470/21/L603}
 }
 
 @InCollection{	  tracy:89:introduction,
@@ -48053,21 +48084,7 @@
   url		= {https://doi.org/10.1007/BFb0002685}
 }
 
-@InProceedings{	  zabczyk:89:some,
-  author	= {Zabczyk, Jerzy},
-  title		= {Some interplays between control theory and stochastic
-		  systems},
-  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
-		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
-  pages		= {229--231},
-  publisher	= {IEEE, New York},
-  year		= {1989},
-  mrclass	= {93E03 (93C25)},
-  mrnumber	= {1038935},
-  mrreviewer	= {Akira Ichikawa}
-}
-
-@Article{	  zabczyk:89:some*1,
+@Article{	  zabczyk:89:some,
   author	= {Zabczyk, J.},
   title		= {Some comments on stabilizability},
   journal	= {Appl. Math. Optim.},
@@ -48082,6 +48099,20 @@
   mrreviewer	= {Enrique Zuazua},
   doi		= {10.1007/BF01448189},
   url		= {https://doi.org/10.1007/BF01448189}
+}
+
+@InProceedings{	  zabczyk:89:some*1,
+  author	= {Zabczyk, Jerzy},
+  title		= {Some interplays between control theory and stochastic
+		  systems},
+  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
+		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
+  pages		= {229--231},
+  publisher	= {IEEE, New York},
+  year		= {1989},
+  mrclass	= {93E03 (93C25)},
+  mrnumber	= {1038935},
+  mrreviewer	= {Akira Ichikawa}
 }
 
 @InCollection{	  zabczyk:89:symmetric,
